Fixed setting logo alignment on mobile

--- a/ElliptiKeys/src/app/navbar/navbar.component.css
+++ b/ElliptiKeys/src/app/navbar/navbar.component.css
@@ -105,6 +105,11 @@ nav, .navbar-collapse, .navbar-brand, .navbar-nav, .nav-link, .navbar-toggler, .
         padding-right: 0% !important;
     }
 
+    .navSettingsLogo
+    {
+        justify-content: flex-end;
+    }
+
     #priceWrapperLi
     {
         display: flex; 
